src/objects/agf__ADM_Work_Subscriber__c.object
<CustomObject>
    <description>Used to create linkage between the custom work object and users. This will be queried later to be used when sending out notification emails.</description>
    <fields>
        <fullName>agf__Always_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Assigned</fullName>
                </value>
                <value>
                    <fullName>Manually Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Distribution_List__c</fullName>
        <label>Distribution List</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agf__Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Is_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Recipient_Input__c</fullName>
        <label>Recipient Input</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N90000000NkrdEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__WorkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkId</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>R00N90000000NkreEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Subscriber</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Work Update Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>